--- a/bin/src/main/resources/application.yml
+++ b/bin/src/main/resources/application.yml
@@ -14,7 +14,7 @@ spring:
     url: jdbc:mysql://localhost:3306/tenco_shop?serverTimezone=Asia/Seoul
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
-    password: 1234
+    password: asd1234
   
 mybatis:
   mapper-locations:
