--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,7 +19,7 @@ spring:
     url: jdbc:mysql://localhost:3306/tenco_shop?serverTimezone=Asia/Seoul
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
-    password: asd1234
+    password: 12341234
   
 mybatis:
   mapper-locations:
