--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,9 @@ dependencies {
 	
 	// 암호화
 	implementation 'org.springframework.security:spring-security-crypto'
+	
+	// validation 라이브러리 추가
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
 }
 
 tasks.named('test') {
