--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,9 @@ dependencies {
 	
 	// validation 라이브러리 추가
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	
+	// AOP 라이브러리 추가
+	implementation 'org.springframework.boot:spring-boot-starter-aop'
 }
 
 tasks.named('test') {
