--- a/bin/main/application.yml
+++ b/bin/main/application.yml
@@ -24,7 +24,7 @@ spring:
     url: jdbc:mysql://localhost:3306/tenco_shop?serverTimezone=Asia/Seoul
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
-    password: 12341234
+    password: 1234
   
 mybatis:
   mapper-locations:
